@@ -7,6 +7,7 @@
 * Add MoneyMovers gateway [jeffutter]
 * Ogone: Add a :store_amount option [rymai]
 * Ogone: Require TLSv1 [ntalbott]
+* Moneris: Add support for purchasecorrection [pgib]
 
 == Version 1.38.1 (September 16, 2013)
 
